live streaming using opencv working

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <div class="container">
         <div class="cont_child" id="input_container">
-            <video class="box" id="input_box" autoplay></video>
+            <img class="box" id="input_box">
             <button id="inp_btn">Input</button>
         </div>
         <div class="cont_child" id="output_container">
-            <video class="box" id="output_box"></video>
+            <img class="box" id="output_box">
             <button id="out_btn">Output</button>
         </div>
     </div>
