face_detection working

--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="cont_child" id="input_container">
-            <img class="box" id="input_box">
-            <button id="inp_btn">Input</button>
+        <div class="on-detect">
+            <img class="box">
+            <button class="btn" id="stop_btn">Stop Detecting</button>
         </div>
-        <div class="cont_child" id="output_container">
-            <img class="box" id="output_box">
-            <button id="out_btn">Output</button>
-        </div>
+        <button class="btn" id="detect_btn">Detect Dummy Face</button>
     </div>
 </body>
 <script src="static/script.js"></script>
